force-app/main/default/objects/Apttus_Config2__OrderUsagePriceTier__c/Apttus_Config2__OrderUsagePriceTier__c.object-meta.xml
<CustomObject>
    <description>Represents a single entry in an order usage price tier</description>
    <label>Order Usage Price Tier</label>
    <nameField>
        <displayFormat>OT-{0000000000}</displayFormat>
        <label>Tier Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Usage Price Tiers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>