force-app/main/default/objects/Apttus_Config2__OrderUsagePriceTier__c/fields/Apttus_Config2__Dimension3Value__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Dimension3Value__c</fullName>
    <description>The value for the third dimension</description>
    <label>Dimension 3 Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>