force-app/main/default/objects/Apttus_Config2__OrderUsagePriceTier__c/fields/Apttus_Config2__OrderLineItemId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__OrderLineItemId__c</fullName>
    <description>ID of the associated order line item</description>
    <inlineHelpText>ID of the associated order line item</inlineHelpText>
    <label>Order Line Item</label>
    <referenceTo>Apttus_Config2__OrderLineItem__c</referenceTo>
    <relationshipLabel>Order Usage Price Tiers</relationshipLabel>
    <relationshipName>OrderUsagePriceTiers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>