force-app/main/default/objects/Apttus_Config2__OrderUsagePriceTier__c/fields/Apttus_Config2__PriceMatrixId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__PriceMatrixId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the associated matrix</description>
    <inlineHelpText>ID of the associated matrix</inlineHelpText>
    <label>Price Matrix</label>
    <referenceTo>Apttus_Config2__PriceMatrix__c</referenceTo>
    <relationshipLabel>Order Usage Price Tiers</relationshipLabel>
    <relationshipName>OrderUsagePriceTiers</relationshipName>
    <type>Lookup</type>
</CustomField>